finish the challenge

--- a/css-basics/css-basics_pseudo-park/css/styles.css
+++ b/css-basics/css-basics_pseudo-park/css/styles.css
@@ -22,6 +22,7 @@
 
 .animal {
   padding: 16px;
+  font-size: 32px;
 
   /*
     The animals are very small.
@@ -30,6 +31,25 @@
   */
 }
 
+.giraffe {
+  text-align: center;
+}
+
+.dino {
+  text-align: right;
+}
+
+.crocodile:hover {
+  background-color: lightblue;
+}
+
+.giraffe:hover {
+  background-color: lightgreen;
+}
+
+.dino:hover {
+  background-color: lightsalmon;
+}
 /*
   The giraffe is afraid of the crocodile and the dino.
    - center the giraffe in the park
