--- a/css-structure_selectors-and-cascading/css/styles.css
+++ b/css-structure_selectors-and-cascading/css/styles.css
@@ -76,7 +76,7 @@ nav a {
 }
 
 /* 5. These styles should apply to the main navigation link corresponding to the current page */
-nav .current {
+nav a.current {
   outline: 2px dashed red;
   color: #22e781;
 }
