--- a/css-structure_selectors-and-cascading/css/styles.css
+++ b/css-structure_selectors-and-cascading/css/styles.css
@@ -128,7 +128,7 @@ main .list {
 }
 
 /* 13. These styles should apply to all nested lists */
-.list .list {
+ul ul {
   outline: 2px dashed red;
   margin: 0.5rem 0 0 0;
   background-color: #f1f1f1;
