--- a/css-structure_selectors-and-cascading/css/styles.css
+++ b/css-structure_selectors-and-cascading/css/styles.css
@@ -135,7 +135,7 @@ ul ul {
 }
 
 /* 14. These styles should apply to all list items in nested lists */
-.list .list li {
+ul ul li {
   outline: 2px dashed red;
   margin: 0;
   color: #2673bb;
