change challenge 11 and 12

--- a/css-structure_selectors-and-cascading/css/styles.css
+++ b/css-structure_selectors-and-cascading/css/styles.css
@@ -115,14 +115,14 @@ footer p {
 }
 
 /* 11. These styles should apply to all lists in the main content */
-main .list {
+main ul {
   outline: 2px dashed red;
   padding: 1rem 2rem;
   background: #caced2;
 }
 
 /* 12. These styles should apply to all list items */
-.list {
+li {
   outline: 2px dashed red;
   margin: 0 0 0.5rem 0;
 }
