--- a/css-basics/css-basics_button-styles/css/styles.css
+++ b/css-basics/css-basics_button-styles/css/styles.css
@@ -31,18 +31,25 @@ button {
 
 .button1 {
   /*Style me! Change my border, set a border radius or what you want to try out. :) */
+  border-radius: 10px;
 }
 
 .button2 {
   /*Style me! Change my color, or my background-color. Or both! You can test out different color modes here - like HEX, RGB, ... */
+  color: papayawhip;
+  background-color: darkslateblue;
 }
 
 .button3 {
   /*Style me! You can test out changing the font, or font size, ...*/
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: xx-large;
 }
 
 .button4 {
   /*Style me! Can you add a shadow to this button? Maybe play around with the shadow properties, as well? You can even color the shadow, make it bigger or smaller, ... */
+  box-shadow: 5px 10px palevioletred;
+  border-radius: 15px 50px 30px;
 }
 
 /* Feel free to play around with other properties, as well. */
