--- a/css-basics/css-basics_pokemon-page/css/styles.css
+++ b/css-basics/css-basics_pokemon-page/css/styles.css
@@ -5,11 +5,14 @@
 /* Task 1: First of all we want to adjust how the size of our elements is calculated when working with CSS. Do you know how to switch from "content-box" to "border-box"? */
 
 /* your solution */
+* {
+  box-sizing: border-box;
+}
 
 /* Task 2: Let's work on some basic stylings that we want to apply to all elements of your code via inheritance. Which selector do we need for this? */
 
 /* add selector */
- {
+body {
   font-family: monospace;
   font-size: 1rem;
   line-height: 1.5;
@@ -21,6 +24,9 @@
 /* Task 3: To set the line height to 1.5 is good for texts, because of accessibility concerns, but for the headings it seems too much. Let's change this by giving our headings a line height of 1.2: */
 
 /* your solution */
+.title {
+  line-height: 1.2;
+}
 
 /* Task 4: Now we want to give our h1 element more styles to shine! Add the following styles by writing the correct declarations inside of the declaration block of the next CSS rule:
 
@@ -30,8 +36,12 @@
 - Center the text of the heading
 */
 
-.title {
+h1 {
   /* your solution */
+  background-color: white;
+  margin-top: 0px;
+  padding: 10px;
+  text-align: center;
 }
 
 /* ------- Sections ------- */
@@ -46,6 +56,10 @@
 
 section {
   /* your solution */
+  background-color: white;
+  padding: 20px;
+  margin: 10px;
+  border-left: 5px solid orange;
 }
 
 /* ------- Headings Part 2 ------- */
@@ -60,6 +74,15 @@ section {
 
 .subtitle {
   /* your solution */
+  display: inline;
+  padding: 10px;
+  border-left: 3px solid gold;
+  border-right: 3px solid gold;
+}
+
+.favourites .subtitle {
+  border-left: 3px orange solid;
+  border-right: 3px orange solid;
 }
 
 /* ------- List ------- */
@@ -67,14 +90,14 @@ section {
 /* Task 7: Last but not least! We want to style our list with our favorite Pokémon. Which selector do we need? And also add values for the padding. */
 
 /* add selector */
- {
+li {
   list-style: "🧡";
-  padding-left: /* add value */ ;
+  padding-left: 3px;
 }
 
 /* add selector */
- {
-  padding-left: /* add value */ ;
+p {
+  padding-left: 3px; /* add value */
 }
 
 /* ------- The End -------- */
